[FIX] augmentation contraste

--- a/app/layout.css
+++ b/app/layout.css
@@ -46,7 +46,7 @@ body {
 }
 
 .block_white {
-    background: rgba(255, 255, 255, 0.5);
+    background: rgba(196, 188, 188, 0.8);
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.3);
